<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="150dp"
        android:layout_height="225dp"
        android:layout_marginTop="18dp"
        android:src="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="15dp"
        android:textSize="23sp"
        android:textStyle="bold"
        android:text="@string/text_title"
        android:minLines="1"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textColor="@color/title"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_title"/>

    <TextView
        android:id="@+id/ratingNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginStart="10dp"
        android:textSize="17sp"
        android:text="@string/rating_num"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintBottom_toTopOf="@id/rating_bar"
        app:layout_constraintVertical_bias="0"/>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        style="?android:ratingBarStyleSmall"
        android:stepSize="0.5"
        android:isIndicator="true"
        android:rating="1"
        app:layout_constraintStart_toStartOf="@id/rating"
        app:layout_constraintTop_toBottomOf="@id/rating"/>

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textColor="@color/title"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@id/rating_bar"
        app:layout_constraintTop_toBottomOf="@id/rating_bar"/>

    <TextView
        android:id="@+id/genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/desc_genre"
        android:maxLines="2"
        app:layout_constraintStart_toStartOf="@id/text_genre"
        app:layout_constraintTop_toBottomOf="@id/text_genre"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bookmark"
        app:layout_constraintBottom_toBottomOf="@id/bookmark"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_bookmark"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/img_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/overview"
        android:textColor="@color/title"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookmark" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_overview"
        tools:text="@string/desc_overview" />

</androidx.constraintlayout.widget.ConstraintLayout>